# DinamometerQt

./: .gitignore  CMakeLists.txt  DinamometerQt.pro  Dockerfile  README.md  changes.diff  deploy.sh  deploy_debug.sh  images.qrc  toolchain-armhf.cmake
.github/workflows/: ci.yml
include/: backgroundwidget.h  dynamometer.h  mainwindow.h
resources/: fonts.qrc  images.qrc
src/: PROVA  backgroundwidget.cpp  dynamometer.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
